[package]
name = "gotify2matrix"
version = "0.1.0"
edition = "2021"

[dependencies]
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", features = ["e2e-encryption"]}
ruma = "0.7.4"
anyhow = "1.0.75"
url = { version = "2.4.1", features = ["serde"]}
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "io-std"] }
serde = "1.0.192"
serde_json = "1.0.108"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
dirs = "5.0.1"
structopt = "0.3.26"
toml = "0.8.8"
futures-util = "0.3.24"
gotify = { version = "0.4.0", features = ["client-core", "manage-messages", "manage-applications", "websocket"] }
